Add more attributes to instance
