# api/api/swagger/swagger.yaml
@@ -19,10 +19,22 @@ paths:
       operationId: list_instances
       parameters:
         - name: id
-          type: string
+          type: number
           in: query
         - name: name
           type: string
+          in: query
+        - name: memory
+          type: number
+          in: query
+        - name: type
+          type: string
+          in: query
+        - name: tag
+          type: string
+          in: query
+        - name: private
+          type: boolean
           in: query
       responses:
         "200":
@@ -44,9 +56,7 @@ paths:
         - name: body
           in: body
           schema:
-            properties:
-              name:
-                type: string 
+            $ref: "#/definitions/CreateInstanceRequest"
       responses:
         "201":
           description: Success
@@ -68,7 +78,7 @@ paths:
           in: path
           description: The ID of the instance
           required: true
-          type: string
+          type: number
       responses:
         "200":
           description: Success
@@ -88,13 +98,11 @@ paths:
           in: path
           description: The ID of the instance
           required: true
-          type: string
+          type: number
         - name: body
           in: body
           schema:
-            properties:
-              name:
-                type: string 
+            $ref: "#/definitions/UpdateInstanceRequest"
       responses:
         "200":
           description: Success
@@ -114,7 +122,7 @@ paths:
           in: path
           description: The ID of the instance
           required: true
-          type: string
+          type: number
       responses:
         "200":
           description: Success
@@ -131,11 +139,51 @@ definitions:
     required:
       - id
       - name
+      - memory
+      - type
+      - private
     properties:
       id:
-        type: string
+        type: number
       name:
         type: string
+      memory:
+        type: number
+      type:
+        type: string
+      tag:
+        type: string
+      private:
+        type: boolean
+  CreateInstanceRequest:
+    required:
+      - name
+      - memory
+      - type
+      - private
+    properties:
+      name:
+        type: string
+      memory:
+        type: number
+      type:
+        type: string
+      tag:
+        type: string
+      private:
+        type: boolean
+  UpdateInstanceRequest:
+    properties:
+      name:
+        type: string
+      memory:
+        type: number
+      type:
+        type: string
+      tag:
+        type: string
+      private:
+        type: boolean
   GeneralResponse:
     required:
       - success
